--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,18 @@ footer{
     margin-bottom: 1rem;
 }
 
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.over-circle{
+    border-radius: 50%;
+}
+
 .cover a{
     position: absolute;
     color: white;
@@ -230,11 +242,11 @@ footer{
     display: none;
 }
 
-.cover img:hover{
-    filter: brightness(50%);
+.cover:hover .overlay{
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.cover img:hover + a{
+.cover:hover a{
     display: block;
 }
 
